--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,36 @@
 version: '3.7'
 
 services:
+  nginx:
+    container_name: redmine_proxy
+    image:  nginx:1.21
+    #restart: always
+    ports:
+      - "7501:8080"
+    depends_on:
+      - redmine
+    volumes:
+      - ./nginx/conf.d/:/etc/nginx/conf.d/
   redmine:
     container_name: redmine_app
     image: redmine:4.2.4
     env_file:
       - redmine.env
-    restart: always
+    #restart: always
+    depends_on:
+      - db
     ports:
-      - 8080:3000
+      - '7500:3000'
     volumes:
       - ./files:/usr/src/redmine/files
   db:
     container_name: redmine_db
-    restart: always
+    #restart: always
     build: './postgres96pe'
     env_file:
       - database.env
     ports:
-      - '50000:5432'
+      - '50001:5432'
     volumes:
       - pg-data:/var/lib/postgresql/data
 volumes:
